fix(action): Fix slideout form margin layout bug if no action buttons

--- a/admin/views/assets/stylesheets/scss/app/_actions.scss
+++ b/admin/views/assets/stylesheets/scss/app/_actions.scss
@@ -120,9 +120,6 @@
     min-height: 0;
     padding-top: 0;
     margin: -16px -24px 0;
-    & + .qor-page__body{
-      margin-top: -50px;
-    }
     .mdl-button{
       height: 36px;
       line-height: 36px;
@@ -132,6 +129,7 @@
     .qor-action-forms{
       margin-top: 16px;
       text-align: right;
+      margin-bottom: -50px;
     }
   }
 }
